[tool.poetry]
name = "m-19-prod"
version = "0.1.0"
description = ""
authors = ["Strahov Valery <strahov.val@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2.0"
djangorestframework = "3.14.0"
django-debug-toolbar = "^4.1.0"
django-filter = "^23.2"
pillow = "^9.5.0"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
